/*
 * $Id: ChangeLog,v 1.2144 2004/01/26 14:59:25 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-26 17:10 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
   * fixed my typo and redefining [U]LONGLONG_* if they allready exist
     (OpenWatcom)

2004-01-26 15:56 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
    + added [U]LLONG_MAX/MIN support for older GCC version or compilation
      without g99 flag

  * xharbour/config/linux/gcc.cf
    - removed g99 flag - I have nothing against GNU99 standard but this
      flag allows to use some extensions which can make a trouble with
      porting to other system/compilers so I don't want to set it as
      default until it won't be strictly necessary for father developing

  * xharbour/contrib/libct/Makefile
    - setlast.c removed - now is a part of RTL

  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * debug code divided into two parts enabled by macros HB_CDX_DBGCODE
      and HB_CDX_DBGCODE_EXT. First macro doesn't give a big overhead
      and can be enabled by default, the second slow down very much making
      deep index structure analyzes. I did this looking for bug in
      GCC 3.3.2 and -)3 optimization. I've found where the problem was
      and changed the code to workaround this bug (I think we should inform
      GCC team about it) but the funny thing was that the enabling old
      debug code cause to compile dbfcdx.c correctly. Before my wrk.ard.
      the bug could be seen only with HB_CDX_DBGCODE_EXT without
      HB_CDX_DBGCODE. Now I'm thinking about Windows and BCC. I'm not
      BCC user and cannot say much about current Windows version but I
      remember that old BCC 3.1 has some strange bugs when full optimization